--- a/src/components/card/style.css
+++ b/src/components/card/style.css
@@ -1,10 +1,13 @@
 .card {
-    margin: 10px;
+    margin: 20px 10px;
     border-radius: 10px;
+    width: 500px;
+    min-width: 200px;
+    display: block;
     overflow: hidden;
     box-shadow: 0px 6px 18px -9px rgba(0, 0, 0, 0.75);
     transition: transform 100ms ease-in;
-    cursor: pointer;
+    cursor: pointer;    
   }
   
   .card:hover {
@@ -13,7 +16,7 @@
   
   .card > img {
     object-fit: fill;
-    min-width: 300px;
+    min-width: 150px;
     min-height: 200px;
     width: 100%;
   }
