--- a/src/components/home/style.css
+++ b/src/components/home/style.css
@@ -1,4 +1,8 @@
 .home_section {
-    display: flex;
+    display: flex;    
+    flex-wrap: wrap;
+    justify-content: space-between;
+    max-width: 1600px;
+    margin: 0 auto;
     padding: 30px;
   }
